<resources>
    <string name="app_name">myCap Nutrition</string>
    <string name="section_format">Day %1$d</string>
    <string name="title_activity_record_view">Record Food</string>
    <string name="title_activity_select_food">Select Food</string>
    <string name="title_activity_add_food">Add Food</string>
    <string name="title_activity_add_unit">Add Unit</string>
    <string name="title_activity_unit_list">Unit List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Options Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_submit">Done</string>

    <!-- Strings related to Settings -->

    <!-- Me settings -->
    <string name="pref_header_me">Me</string>

    <string name="pref_title_daily_kcal_goal">Daily Calorie (kcal) goal</string>

    <!-- Data settings -->
    <string name="pref_header_data">Data</string>

    <string name="pref_title_data_export">Export data</string>
    <string name="pref_summary_data_export">
        Export entire database as mccsv (csv-like) file.
    </string>

    <string name="pref_title_data_import">Import data</string>
    <string name="pref_summary_data_import">Import data from mccsv (csv-like) file.</string>
    <!-- also see data import notification -->

    <string name="pref_title_data_clear">Clear data</string>
    <string name="pref_summary_data_clear">Clear entire database.</string>
    <!-- also see data import alert -->

    <string name="pref_title_data_food">Food</string>
    <string name="pref_summary_data_food">List of all food entries.</string>

    <string name="pref_title_data_unit">Units</string>
    <string name="pref_summary_data_unit">List of all unit entries.</string>

    <!-- Strings related to Notifications -->

    <!-- Data import -->
    <string name="notify_title_data_import">Data import</string>
    <string name="notify_text_data_import_progress">Data import in progress</string>
    <string name="notify_text_data_import_complete">Data import complete</string>

    <!-- Strings related to Alerts -->

    <!-- Data clear -->
    <string name="alert_title_clear_data">Clear database?</string>
    <string name="alert_message_clear_data">This action cannot be undone!</string>
    <string name="alert_positive_clear_data">Clear Data</string>
    <string name="alert_negative_clear_data">Cancel</string>
    <string name="alert_positive_toast_clear_data">Database cleared.</string>
    <string name="alert_negative_toast_clear_data">Database preserved.</string>

    <!-- Strings related to displaying numbers -->

    <string name="kcal">kcal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
