<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/pref_title_data_export"
        android:summary="@string/pref_summary_data_export"
        android:key="export_data">
    </Preference>

    <Preference
        android:title="@string/pref_title_data_import"
        android:summary="@string/pref_summary_data_import"
        android:key="import_data">
    </Preference>

    <Preference
        android:title="@string/pref_title_data_clear"
        android:summary="@string/pref_summary_data_clear"
        android:key="clear_data">
    </Preference>

    <Preference
        android:title="@string/pref_title_data_food"
        android:summary="@string/pref_summary_data_food">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.schnellp.mycapnutrition"
            android:targetClass="net.schnellp.mycapnutrition.View.SelectFood">

            <extra android:name="SELECT_FOOD_PURPOSE" android:value="LIST" />
        </intent>

    </Preference>

    <Preference
        android:title="@string/pref_title_data_unit"
        android:summary="@string/pref_summary_data_unit">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.schnellp.mycapnutrition"
            android:targetClass="net.schnellp.mycapnutrition.View.SelectFood">

            <extra android:name="SELECT_FOOD_PURPOSE" android:value="FILTER_UNITS" />
        </intent>

    </Preference>
</PreferenceScreen>