<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.JournalDayView">

    <group
        android:id="@+id/menu_options_single_select_group">
        <item
            android:id="@+id/action_edit"
            android:orderInCategory="90"
            android:title="@string/action_edit"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/menu_options_multi_select_group">
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="100"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
